--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+        <!---MenuInicial--->
         <header class="menuprincipal">
             <main>
                 <div class="header-1" >
@@ -27,9 +28,7 @@
                     </div>
             </main>
         </header>
-            <!---<div class="Titulo">
-                <h1>DROP #2</h1>
-            </div>--->
+    <!---Slides--->
         <div class="col-100">
                  <div class="slider">
                     <img src="./src/img/drop1.png"/>
@@ -42,6 +41,7 @@
                 <li><a href=""><img src="./src/img/confira.png" /></a></li>
             </ul>
         </div>
+    
         <div class="col-100 headerfinal">
             
         </div>
